--- a/css/styles.css
+++ b/css/styles.css
@@ -459,6 +459,7 @@ body {
 }
 .main-contact:hover,
 .main-contact:focus {
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--pressed-state-color);
 }
 .list-team-portfolio {
@@ -484,9 +485,39 @@ body {
   padding-bottom: 32px;
   padding-left: 16px;
 }
+.shadow {
+  display: block;
+}
 .shadow:hover,
 .shadow:focus {
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: block;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: var(--primary-brand-color);
+  color: var(--light-color);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 40px 32px 40px 32px;
+  left: 0;
+  top: 0;
+  overflow: auto;
+  transform: translate(0, 100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.product-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.shadow:hover .overlay,
+.shadow:focus .overlay {
+  transform: translate(0, 0);
 }
