--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   --white-color: #ffffff;
   --socil-icon-second-bg: #31d0aa;
   --color-border: #8e8f99;
+  --modal-window: #fcfcfc;
 }
 
 .list {
@@ -111,6 +112,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-contact {
@@ -118,6 +120,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-address:not(:last-child) {
   margin-right: 40px;
@@ -154,7 +157,9 @@ body {
   display: block;
   margin: auto;
   border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .text-button {
   font-weight: 500;
   font-size: 16px;
@@ -303,6 +308,7 @@ body {
   width: 40px;
   height: 40px;
   background-color: var(--primary-brand-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list-link:focus,
 .social-list-link:hover {
@@ -342,6 +348,7 @@ body {
   color: var(--color-border);
   border: 1px solid var(--color-border);
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link-customers:hover,
 .link-customers:focus {
@@ -397,6 +404,7 @@ body {
   align-items: center;
   border-radius: 50%;
   background-color: var(--text-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list-link-footer:hover,
 .social-list-link-footer:focus {
@@ -450,6 +458,7 @@ body {
   border: 1px solid var(--accent-color);
   padding: 12px 24px;
   border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .progect-card-title {
@@ -512,6 +521,7 @@ body {
 }
 .shadow {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .shadow:hover,
 .shadow:focus {
@@ -545,4 +555,57 @@ body {
 .shadow:hover .overlay,
 .shadow:focus .overlay {
   transform: translate(0, 0);
+}
+/* ================= MODAL WINDOW ============== */
+.backdrop {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  height: 576px;
+  background-color: var(--modal-window);
+}
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: var(--accent-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  background: var(--pressed-state-color);
+}
+.modal-close-btn:hover .modal-close-btn-icon,
+.modal-close-btn:focus .modal-close-btn-icon {
+  fill: var(--white-color);
+}
+.modal-close-btn-icon {
+  width: 8px;
+  height: 8px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
