--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
   --socil-icon-second-bg: #31d0aa;
   --color-border: #8e8f99;
   --modal-window: #fcfcfc;
+  --time-animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list {
@@ -112,7 +113,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms var(--time-animation);
 }
 
 .main-contact {
@@ -120,7 +121,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--text-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--time-animation);
 }
 .list-address:not(:last-child) {
   margin-right: 40px;
@@ -157,7 +158,7 @@ body {
   display: block;
   margin: auto;
   border: none;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--time-animation);
 }
 
 .text-button {
@@ -308,7 +309,7 @@ body {
   width: 40px;
   height: 40px;
   background-color: var(--primary-brand-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--time-animation);
 }
 .social-list-link:focus,
 .social-list-link:hover {
@@ -348,7 +349,7 @@ body {
   color: var(--color-border);
   border: 1px solid var(--color-border);
   border-radius: 4px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--time-animation);
 }
 .link-customers:hover,
 .link-customers:focus {
@@ -404,7 +405,7 @@ body {
   align-items: center;
   border-radius: 50%;
   background-color: var(--text-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--time-animation);
 }
 .social-list-link-footer:hover,
 .social-list-link-footer:focus {
@@ -458,7 +459,7 @@ body {
   border: 1px solid var(--accent-color);
   padding: 12px 24px;
   border-radius: 4px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--time-animation);
 }
 
 .progect-card-title {
@@ -493,7 +494,7 @@ body {
 }
 .main-contact:hover,
 .main-contact:focus {
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--time-animation);
   color: var(--pressed-state-color);
 }
 .list-team-portfolio {
@@ -521,11 +522,11 @@ body {
 }
 .shadow {
   display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow var(--time-animation);
 }
 .shadow:hover,
 .shadow:focus {
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--time-animation);
   display: block;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -545,7 +546,7 @@ body {
   top: 0;
   overflow: auto;
   transform: translate(0, 100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--time-animation);
 }
 .product-wrapper {
   position: relative;
@@ -565,8 +566,7 @@ body {
   width: 100%;
   height: 100%;
   background: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity var(--time-animation), visibility var(--time-animation);
 }
 .modal {
   position: absolute;
@@ -590,7 +590,7 @@ body {
   background-color: var(--accent-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--time-animation);
 }
 .modal-close-btn:hover,
 .modal-close-btn:focus {
@@ -603,7 +603,7 @@ body {
 .modal-close-btn-icon {
   width: 8px;
   height: 8px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--time-animation);
 }
 .backdrop.is-hidden {
   opacity: 0;
