--- a/css/styles.css
+++ b/css/styles.css
@@ -568,6 +568,7 @@ body {
   width: 408px;
   height: 576px;
   background-color: var(--modal-window);
+  padding: 72px 24px 24px 24px;
 }
 .modal-close-btn {
   position: absolute;
@@ -602,3 +603,29 @@ body {
   visibility: hidden;
   pointer-events: none;
 }
+/* ================= MODAL WINDOW ============== */
+/* ================= MODAL FORM ============== */
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid var(--primary-brand-color);
+  border-radius: 4px;
+  padding-left: 38px;
+}
+.modal-form-input-desc {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  color: var(--color-border);
+  margin-bottom: 4px;
+}
+.modal-form-field {
+  margin-bottom: 8px;
+}
+/* ================= MODAL FORM ============== */
